--- a/home.html
+++ b/home.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Curso Javascript</title>
     <script src="aula.js"></script>
+    <script src="minPro1.js"></script>
 </head>
 <body>
     <h1>Aprendendo JS</h1>
