Mini Projeto 3 - FizzBuzz

--- a/home.html
+++ b/home.html
@@ -8,6 +8,7 @@
     <script src="aula.js"></script>
     <script src="Mini-Projetos/minPro1.js"></script>
     <script src="Mini-Projetos/minPro2.js"></script>
+    <script src="Mini-Projetos/minPro3.js"></script>
 </head>
 <body>
     <h1>Aprendendo JS</h1>
