--- a/home.html
+++ b/home.html
@@ -9,9 +9,9 @@
     <!-- <script src="Mini-Projetos/minPro01.js"></script>
     <script src="Mini-Projetos/minPro02.js"></script>
     <script src="Mini-Projetos/minPro03.js"></script> -->
-    <script src="Mini-Projetos/minPro04.js"></script>
-    <!-- <script src="Mini-Projetos/minPro05.js"></script>
-    <script src="Mini-Projetos/minPro06.js"></script>
+    <!-- <script src="Mini-Projetos/minPro04.js"></script> -->
+    <script src="Mini-Projetos/minPro05.js"></script>
+    <!-- <script src="Mini-Projetos/minPro06.js"></script>
     <script src="Mini-Projetos/minPro07.js"></script>
     <script src="Mini-Projetos/minPro08.js"></script>
     <script src="Mini-Projetos/minPro09.js"></script>
@@ -19,7 +19,7 @@
     <script src="Mini-Projetos/minPro11.js"></script>
     <script src="Mini-Projetos/minPro12.js"></script>
     <script src="Mini-Projetos/minPro13.js"></script>
-    <script src="Mini-Projetos/minPro14.js"></script> -->
+    <script src="Mini-Projetos/minPro14.js"></script> --> 
 </head>
 <body>
     <h1>Aprendendo JS</h1>
