Correção Mini Projeto (6) - Encontre o String

--- a/home.html
+++ b/home.html
@@ -10,8 +10,8 @@
     <script src="Mini-Projetos/minPro02.js"></script>
     <script src="Mini-Projetos/minPro03.js"></script> -->
     <!-- <script src="Mini-Projetos/minPro04.js"></script> -->
-    <script src="Mini-Projetos/minPro05.js"></script>
-    <!-- <script src="Mini-Projetos/minPro06.js"></script>
+    <!-- <script src="Mini-Projetos/minPro05.js"></script> -->
+    <script src="Mini-Projetos/minPro06.js"></script>
     <script src="Mini-Projetos/minPro07.js"></script>
     <script src="Mini-Projetos/minPro08.js"></script>
     <script src="Mini-Projetos/minPro09.js"></script>
