Mini Projeto (7) - Multiplos de 3 e 5

--- a/home.html
+++ b/home.html
@@ -5,13 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Curso Javascript</title>
-    <script src="aula.js"></script>
+    <!-- <script src="aula.js"></script> -->
     <!-- <script src="Mini-Projetos/minPro01.js"></script>
     <script src="Mini-Projetos/minPro02.js"></script>
     <script src="Mini-Projetos/minPro03.js"></script> -->
     <!-- <script src="Mini-Projetos/minPro04.js"></script> -->
     <!-- <script src="Mini-Projetos/minPro05.js"></script> -->
-    <script src="Mini-Projetos/minPro06.js"></script>
+    <!-- <script src="Mini-Projetos/minPro06.js"></script> -->
     <script src="Mini-Projetos/minPro07.js"></script>
     <script src="Mini-Projetos/minPro08.js"></script>
     <script src="Mini-Projetos/minPro09.js"></script>
