Mini Projeto (9) - Contador de asteriscos

--- a/home.html
+++ b/home.html
@@ -13,7 +13,7 @@
     <!-- <script src="Mini-Projetos/minPro05.js"></script> -->
     <!-- <script src="Mini-Projetos/minPro06.js"></script> -->
     <!-- <script src="Mini-Projetos/minPro07.js"></script> -->
-    <script src="Mini-Projetos/minPro08.js"></script>
+    <!-- <script src="Mini-Projetos/minPro08.js"></script> -->
     <script src="Mini-Projetos/minPro09.js"></script>
     <script src="Mini-Projetos/minPro10.js"></script>
     <script src="Mini-Projetos/minPro11.js"></script>
