--- a/home.html
+++ b/home.html
@@ -14,7 +14,7 @@
     <!-- <script src="Mini-Projetos/minPro06.js"></script> -->
     <!-- <script src="Mini-Projetos/minPro07.js"></script> -->
     <!-- <script src="Mini-Projetos/minPro08.js"></script> -->
-    <script src="Mini-Projetos/minPro09.js"></script>
+    <!-- <script src="Mini-Projetos/minPro09.js"></script> -->
     <script src="Mini-Projetos/minPro10.js"></script>
     <script src="Mini-Projetos/minPro11.js"></script>
     <script src="Mini-Projetos/minPro12.js"></script>
