--- a/home.html
+++ b/home.html
@@ -15,7 +15,8 @@
     <!-- <script src="Mini-Projetos/minPro07.js"></script> -->
     <!-- <script src="Mini-Projetos/minPro08.js"></script> -->
     <!-- <script src="Mini-Projetos/minPro09.js"></script> -->
-    <!-- <script src="Mini-Projetos/minPro10.js"></script> -->
+
+    <script src="Aulas/aula10.js"></script>
     <script src="Mini-Projetos/minPro11.js"></script>
     <script src="Mini-Projetos/minPro12.js"></script>
     <script src="Mini-Projetos/minPro13.js"></script>
