Mini Projeto (15) - Contador de letra em frase

--- a/home.html
+++ b/home.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Curso Javascript</title>
-    <script src="Aulas/aula17.js"></script>
+    <!-- <script src="Aulas/aula17.js"></script> -->
     <!-- <script src="Mini-Projetos/minPro01.js"></script> -->
     <!-- <script src="Mini-Projetos/minPro02.js"></script> -->
     <!-- <script src="Mini-Projetos/minPro03.js"></script> -->
@@ -15,10 +15,11 @@
     <!-- <script src="Mini-Projetos/minPro07.js"></script> -->
     <!-- <script src="Mini-Projetos/minPro08.js"></script> -->
     <!-- <script src="Mini-Projetos/minPro09.js"></script> -->
-    <script src="Mini-Projetos/minPro11.js"></script>
-    <script src="Mini-Projetos/minPro12.js"></script>
+    <!-- <script src="Mini-Projetos/minPro11.js"></script> -->
+    <!-- <script src="Mini-Projetos/minPro12.js"></script>
     <script src="Mini-Projetos/minPro13.js"></script>
-    <script src="Mini-Projetos/minPro14.js"></script> 
+    <script src="Mini-Projetos/minPro14.js"></script> -->
+    <script src="Mini-Projetos/minPro15.js"></script> 
 </head>
 <body>
     <h1>Aprendendo JS</h1>
